fixed whitespace issue

--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -2,6 +2,7 @@
   background-color: #f1f0ee;
   position: relative;
   border: 1px solid black;
+  overflow-wrap: break-word;
 }
 
 #post-delete-button {
@@ -48,7 +49,6 @@
   border-bottom: 1px solid black;
   font-weight: bold;
   font-size: 10px;
-  height: 18px;
 }
 
 @media screen and (min-width: 768px) {
