--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -1,7 +1,7 @@
 .post-titles {
-  height: 35px;
   border: 1px solid black;
   background-color: #f1f0ee;
+  overflow-wrap: break-word;
 }
 
 #post-title-links {
